--- a/style.css
+++ b/style.css
@@ -8,3 +8,65 @@ html {
     font-size: 10px;
     font-family:  'Poppins', sans-serif;
 }
+main{
+    width:100vw;
+    height:100vh;
+    display: flex;
+    flex-direction: column;
+}
+.title{
+    width:100%;
+    height:16%;
+    font-size: 4em;
+    font-weight: 700;
+    letter-spacing: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-bottom: 10px;
+}
+.line{
+    background-color: orangered;
+    width: 5%;
+    height: 0.5%;
+    align-self: center;
+}
+.buttons{
+    width: 100%;
+    height: 7%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+}
+.btn{
+    font-size: 2em;
+    width:fit-content;
+    height: fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 5px;
+    margin-left: 15px;
+    color: orangered;
+    border-color: orangered;
+    transition: 1.1s;
+}
+.btn:hover{
+    background-color: orangered;
+    color: white;
+    cursor: pointer;
+}
+.items{
+    background-color: green;
+    width: 100%;
+    height: 50%;
+    padding-left: 12%;
+}
+.meal{
+    background-color: red;
+    width: 50%;
+    height: 20%;
+
+}
