--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ main{
     width:40%;
     height: 90%;
 }
+.image img{
+    width:100%;
+    height: 100%;
+}
 .info{
     width: 58%;
     margin-left: 3%;
